k8s/base/endpoints-honcho-api-proxy.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: honcho-api-proxy
  namespace: honcho-ui
subsets:
  - addresses:
      - ip: 10.43.90.131
    ports:
      - name: http
        port: 8000
        protocol: TCP
