k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: honcho-ui
  namespace: honcho-ui
  labels:
    app: honcho-ui
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: ui.honcho.bouba.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: honcho-ui
                port:
                  number: 80
  tls:
    - hosts:
        - ui.honcho.bouba.ar
      secretName: honcho-ui-tls
